Closed Bug 1333843 Opened 7 years ago Closed 7 years ago

XULTabAccessible needs to implement HyperTextAccessibleWrap

Categories

(Core :: Disability Access APIs, defect)

All
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: yzen, Assigned: yzen)

Details

Attachments

(1 file)

Right now on windows we hit 

NS_ASSERTION(nsAccUtils::IsTextInterfaceSupportCorrect(this),
  "Does not support Text when it should");

for xul tabs when trying to resolve a role here:
https://dxr.mozilla.org/mozilla-central/source/accessible/windows/msaa/AccessibleWrap.cpp?q=NS_ASSERTION%28nsAccUtils%3A%3AIsTextInterfaceSupportCorrect%28this%29%2C&redirect_type=single#438
Note this is for debug builds only.
Attached patch 1333843 patchSplinter Review
Attachment #8830418 - Flags: review?(surkov.alexander)
Comment on attachment 8830418 [details] [diff] [review]
1333843 patch

Review of attachment 8830418 [details] [diff] [review]:
-----------------------------------------------------------------

Adding some background of the problem, which we discussed with Yura over irc.

A browser tab contains a text node for a tab label and a close tab button. I believe that the text node is exposed in accessible name of a tab, so there's no need to expose it over text interface, however we don't have a good way to hide it, and its presence shouldn't break the user experience anyway. It'd be good to double check the latter with Marco though.
Attachment #8830418 - Flags: review?(surkov.alexander)
Attachment #8830418 - Flags: review+
Attachment #8830418 - Flags: feedback?(mzehe)
Comment on attachment 8830418 [details] [diff] [review]
1333843 patch

I don't see why this should have adverse effects on the user experience. f=me.
Attachment #8830418 - Flags: feedback?(mzehe) → feedback+
Pushed by yura.zenevich@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/f1c00a1914de
xultab accessible needs to support HyperTextAccessibleWrap. r=surkov
https://hg.mozilla.org/mozilla-central/rev/f1c00a1914de
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: