Bug 1333843 - xultab accessible needs to support HyperTextAccessibleWrap. r=surkov

MozReview-Commit-ID: Gt0Rt33udNV